--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta
+    <!-- <meta
       name="description"
-      content="Put your skills to the test and solve thirty-two Wordles at once! You have 37 guesses to solve all 32 words. A new Duotrigordle available each day to solve."
-    />
+      content="nelson gros bouffon"
+    /> -->
     <meta
       name="keywords"
       content="Duotrigordle, Hexadecordle, Octordle, Quordle, Dordle, Wordle, word game, puzzle, brain teaser"
